fixed the innerText bug by changing innertext to textcontent. Now all text seems to be aligned properly

--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@
 	font-family: sans-serif;
 	height: 100vh;
 	/* width: 100vh; */
-	background-color: rgb(95, 161, 95);
+	background-color: black;
+	color: white;
 }
 
 .playercontainer {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-top: -70%;
 }
 
 .computercontainer {
@@ -29,25 +29,13 @@
 .box {
 	display: flex;
 	flex-direction: row;
-	background-color: brown;
 	height: 100px;
 	width: 100px;
 	text-align: center;
 	align-items: center;
 	justify-content: center;
-	margin: 10px;
-}
-
-.rockbox {
-	background-color: brown;
-}
-
-.paperbox {
+	margin: 5px;
 	background-color: gray;
-}
-
-.scissorsbox {
-	background-color: steelblue;
 }
 
 .roundResults {
@@ -56,19 +44,18 @@
 	justify-content: center;
 	width: 342px;
 	height: 100px;
-	background-color: khaki;
-	margin: 10px;
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
+	margin: 5px;
 }
 
-p {
+/* p {
 	display: flex;
 	align-content: center;
-	/* justify-content: left; */
-	margin: -1px;
-	padding: 6px;
-}
+	text-align: center;
+	justify-content: center;
+} */
 
 #resultptag {
 	display: flex;
@@ -82,8 +69,7 @@ p {
 	justify-content: center;
 	width: 342px;
 	height: 100px;
-	background-color: lavender;
-	margin: 10px;
 	text-align: center;
 	align-items: center;
+	margin: 5px;
 }
